changed header image and fixed size/spacing

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -6,7 +6,7 @@ $font-size: 1.25em;
 // Padding
 $padding-large: 20%;
 $padding-small: 5%;
-$padding-x-small: 3%;
+$padding-x-small: 2%;
 
 // Brand colours
 $brand-color: #565656;
@@ -15,7 +15,7 @@ $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
 
 // Typography colours
 $text-color: #f1f1f1;
-$link-color: #34318B;
+$link-color: #99CCFF;
 $selection-color: #D4D4D4; // visible when highlighting text
 
 // Tags color
