--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -5,17 +5,18 @@
   display: inline-block;
   float: left;
   width: 100%;
+}
 
   a {
     color: $header-link-color;
   }
 
   .avatar {
-    height: 2em;
-    width: 2em;
+    height: 4em;
+    width: 8em;
     float: left;
     margin-top: -3px;
-    border-radius: 0.2em;
+    border-radius: 0.5em;
     margin-right: 1em;
   }
 
